Fixed peer view router table map not showing

--- a/app/views/components/card/templates/peerViewPeer/_insert.scss
+++ b/app/views/components/card/templates/peerViewPeer/_insert.scss
@@ -109,3 +109,9 @@
   padding-top: 6px;
 }
 
+.nogeowatermark{
+  font-size:25px;
+  text-align:center;
+  margin-top:50px;
+  height:300px;
+}
